Added trade maker home screen

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         <iron-icon icon="home"></iron-icon>
                         <span>Home</span>
                     </a>
+                    
+                    <a data-route="old-home" href="{{baseUrl}}old-home">
+                        <iron-icon icon="home"></iron-icon>
+                        <span>Old Home</span>
+                    </a>
 
                     <a data-route="users" href="{{baseUrl}}users">
                         <iron-icon icon="info"></iron-icon>
@@ -110,12 +115,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
                     <!-- Application name -->
                     <div class="middle middle-container">
-                        <div class="app-name">Polymer Starter Kit</div>
+                        <div class="app-name">Trade Maker</div>
                     </div>
 
                     <!-- Application sub title -->
                     <div class="bottom bottom-container">
-                        <div class="bottom-title">The future of the web today</div>
+                        <div class="bottom-title">Make a trade. Improve your team.</div>
                     </div>
                 </paper-toolbar>
 
@@ -124,12 +129,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <iron-pages attr-for-selected="data-route" selected="{{route}}">
                         <section data-route="home">
                             <paper-material elevation="1">
+                                <p>
+                                    Import your league and start making trades. Trade Finder searches through the teams in your league for trades that will improve your team, while also improving
+                                    the other guy's team.
+                                </p>
+                            </paper-material>
+                        </section>
+                        
+                        <section data-route="old-home">
+                            <paper-material elevation="1">
                                 <my-greeting></my-greeting>
 
                                 <p class="subhead">You now have:</p>
                                 <my-list></my-list>
 
-                                <p>Looking for more Web App layouts? Check out our <a href="https://github.com/PolymerElements/app-layout-templates">layouts</a>                                    collection. You can also <a href="http://polymerelements.github.io/app-layout-templates/">preview</a>                                    them live.</p>
+                                <p>
+                                    Looking for more Web App layouts? Check out our <a href="https://github.com/PolymerElements/app-layout-templates">layouts</a> 
+                                    collection. You can also <a href="http://polymerelements.github.io/app-layout-templates/">preview</a>
+                                    them live.
+                                </p>
                             </paper-material>
 
                             <paper-material elevation="1">
