--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -44,6 +44,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     page(app.baseUrl, function() {
       app.route = 'home';
     });
+    
+    page('/old-home', function() {
+      app.route = 'old-home';
+    });
 
     page('/users', function() {
       app.route = 'users';
