Starting to type home page

--- a/app/index.html
+++ b/app/index.html
@@ -129,9 +129,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <iron-pages attr-for-selected="data-route" selected="{{route}}">
                         <section data-route="home">
                             <paper-material elevation="1">
+                                <h1>Make a trade. Improve your team.</h1>
                                 <p>
-                                    Import your league and start making trades. Trade Finder searches through the teams in your league for trades that will improve your team, while also improving
-                                    the other guy's team.
+                                    Making a trade is difficult.
+                                </p>
+                                <p>
+                                    Finding a trade that both teams agree is fair, and will benefit both teams, is a near impossible task.
+                                </p>
+                                <p>
+                                    Everyone overvalues their own players, and undervalues the rest. This isn't because they are trying to be unfair. It is their
+                                    natural instinct. This effect is called the "Endowment effect". People will value something more, just because they own it.
+                                </p>
+                                <p>
+                                    You can start to see a problem here.    
                                 </p>
                             </paper-material>
                         </section>
