finish typing home page

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -45,6 +45,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'home';
     });
     
+    page('/trades', function() {
+      app.route = 'trades';
+    });
+    
     page('/old-home', function() {
       app.route = 'old-home';
     });
