--- a/app/elements/league-list-item/league-list-item.html
+++ b/app/elements/league-list-item/league-list-item.html
@@ -33,7 +33,8 @@
         Polymer({
             is: 'league-list-item',
             properties: {
-                league: Object
+                league: Object,
+                notify: true
             },
             _onDelete: function() {
                 this.fire('delete-league', {league: this.league});
