Getting league adding to work

--- a/app/elements/league-data/league-data.html
+++ b/app/elements/league-data/league-data.html
@@ -11,6 +11,7 @@
             is: 'league-data',
             properties: {
                 leagues: {
+                    type: Array,
                     notify: true                    
                 }   
             }
