--- a/app/elements/league-list-view/league-list-view.html
+++ b/app/elements/league-list-view/league-list-view.html
@@ -23,17 +23,17 @@
             <league-list-item league="{{league}}" on-delete-league="_onDelete"></league-list-item>
         </template>
         <paper-fab icon="add" on-tap="_onShowCreate"></paper-fab>
-        <league-editor id="league-creator" on-add-league="_onAdd"></league-editor>
+        <league-editor id="league-creator" on-add-league="_onAdd" league="{{league}}"></league-editor>
     </template>
     <script>
         Polymer({
             is: 'league-list-view',
             _onShowCreate: function() {
-                var editor = document.getElementById('league-creator');
-                editor.showEditor();
+                this.$['league-creator'].showEditor();
             },
-            _onAdd: function() {
-                alert('asdf');
+            _onAdd: function(e) {
+                alert(e.detail.name);
+                this.push('league', {name: e.detail.name});
             },
             _onDelete: function(e) {
                 this.arrayDelete('leagues', e.detail.league)
