getting editing to work

--- a/app/elements/league-data/league-data.html
+++ b/app/elements/league-data/league-data.html
@@ -12,7 +12,7 @@
             properties: {
                 leagues: {
                     type: Array,
-                    notify: true                    
+                    notify: true,               
                 }   
             }
         });
