--- a/app/elements/league-list-view/league-list-view.html
+++ b/app/elements/league-list-view/league-list-view.html
@@ -35,7 +35,7 @@
                 this.push('leagues', e.detail.league);
             },
             _onEdit: function(e) {
-                this.set("leagues.#" + (e.model.index + 1), e.detail.league)
+                this.set('leagues.#' + (e.model.index + 1), e.detail.league)
             },
             _onDelete: function(e) {
                 this.arrayDelete('leagues', e.detail.league)
