--- a/app/elements/league-list-item/league-list-item.html
+++ b/app/elements/league-list-item/league-list-item.html
@@ -25,8 +25,10 @@
         </style>
         <!-- local DOM goes here -->
         <paper-card class="horizontal layout">
-            <paper-ripple></paper-ripple>
-            <div class="flex title-text">{{league.name}}</div>
+            <div class="flex title-text">
+                <paper-ripple></paper-ripple>
+                {{league.name}}
+            </div>
             <paper-icon-button icon="create" on-tap="_onShowEditor"></paper-icon-button>
             <paper-icon-button icon="delete" on-tap="_onDelete"></paper-icon-button>
         </paper-card>
