--- a/app/elements/league-list-view/league-list-view.html
+++ b/app/elements/league-list-view/league-list-view.html
@@ -12,16 +12,19 @@
             /* local DOM styles go here */
             paper-fab {
                 position: fixed;
-                right: 50px;
-                bottom: 50px;
+                right: 25px;
+                bottom: 25px;
             }
         </style>
         <!-- local DOM goes here -->
-        <template class="vertical layout" is="dom-repeat" items="{{leagues}}" as="league">
-            <league-list-item league="{{league}}" on-edit-league="_onEdit" on-delete-league="_onDelete"></league-list-item>
-        </template>
-        <paper-fab icon="add" on-tap="_onShowCreate"></paper-fab>
-        <league-editor id="league-creator" on-save-league="_onAdd"></league-editor>
+        <section id="league-list">
+            <template class="vertical layout" is="dom-repeat" items="{{leagues}}" as="league">
+                <league-list-item league="{{league}}" on-edit-league="_onEdit" on-delete-league="_onDelete" on-select-league="_onSelect"></league-list-item>
+            </template>
+            <paper-fab icon="add" on-tap="_onShowCreate"></paper-fab>
+            <league-editor id="league-creator" on-save-league="_onAdd"></league-editor>
+        </section>
+        
     </template>
     <script>
         Polymer({
@@ -44,6 +47,9 @@
             },
             _onDelete: function(e) {
                 this.arrayDelete('leagues', e.detail.league)
+            },
+            _onSelect: function(e) {
+                this.fire('show-league', { league: e.detail.league });
             }
         });
     </script>
