--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -45,8 +45,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'home';
     });
     
-    page('/trades', function() {
-      app.route = 'trades';
+    page('/leagues', function() {
+      app.route = 'leagues';
     });
     
     page('/contact', function() {
