--- a/app/elements/league-editor/league-editor.html
+++ b/app/elements/league-editor/league-editor.html
@@ -42,7 +42,7 @@
                 league: {
                     type: Object,
                     notify: true,
-                    value: { name: null, url: null }
+                    value: { name: null, url: null, selected: false }
                 }
             },
             showEditor: function() {
