got routing working!

--- a/app/index.html
+++ b/app/index.html
@@ -225,7 +225,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                 <h2 class="page-title">User: {{params.name}}</h2>
                                 <div>This is {{params.name}}'s section</div>
                             </paper-material>-->
-                            <league-view leagueid="{{params.name}}"></league-view>
+                            <league-view leagueid="{{params.name}}" leagues="{{leagues}}"></league-view>
                         </section>
 
                         <section data-route="books">
