--- a/app/elements/league-view/league-view.html
+++ b/app/elements/league-view/league-view.html
@@ -17,7 +17,7 @@
             url="http://www.fleaflicker.com/nfl/leagues/124676/teams/878935"
             handle-as="text"
             last-error="{{ajaxResponse.message}}"
-            on-response="handleResponse" verbose></iron-ajax>
+            on-response="handleResponse" verbose withCredentials></iron-ajax>
         <!--<iron-request id="league-request"></iron-request>
         <!--{{leagueAjax}}-->
         <!--{{ajaxResponse}}-->
